Brouillon sur les templates html

--- a/Templates/Template "Interface donateur".html
+++ b/Templates/Template "Interface donateur".html
@@ -4,5 +4,8 @@
   </head>
   <body>
     <h1>{{username}}</h1>
-    <h2>{{projethot}}</h2>
-    <h3>{{pojetsoutenu}}</h3>
+    <h2>Projet à la une</h2>
+      # {{photo}} + {{nom}} + {{description}} + {{commentaire}} + {{valeurinvestisssement}}
+    <h2>Projets soutenus</h2>
+      # 4 * ({{Image}} + {{commentaire}} + {{montant investi}})
+    
