--- a/Templates/Template "Interface entrepreneur".html
+++ b/Templates/Template "Interface entrepreneur".html
@@ -3,4 +3,14 @@
     <title>{{Interface}}</title>
   </head>
   <body>
-    <h1>
+    <h1>{{username}}</h1>
+    <h2>Vos projets</h2>
+      # 4 * (Image + {Montant collecté})
+    <h3>Entreprendre un nouveau projet</h3>
+      # [imgupload] + [nom] + [montant demandé] + [description]
+    <h2>Profil {username}</h2>
+      # [Description] + [CV]
+    <h3>{{Coordonnées financières}}</h3>
+      # [Numéro de carte] + [Cryptogramme] + [Etablissement bancaire] + [Nom de la carte]
+      # {{Montant collecté}}
+    
