--- a/Templates/Template "Acceuil".html
+++ b/Templates/Template "Acceuil".html
@@ -4,4 +4,11 @@
   </head>
   <body>
     <h2>Financement équitable</h2>
-    
+    # cadre donateur dynamique
+      <a=...>
+      <img={{imgdonateur}}>
+    # centre
+      # 6 * ({{imgprojet}} + {{description}} + {{montantdemande}})
+    # cadre entrepreneur dynamique
+      <a=...>
+      <img={{imgentrepreneur}}>
