--- a/Templates/Template "Inscription #1".html
+++ b/Templates/Template "Inscription #1".html
@@ -3,4 +3,7 @@
     <title>{{Inscription}}</title>
   </head>
   <body>
-    <h1>
+    <h3>Pseudonyme</h3>
+      # [Nom] + [Prénom] + [Nom d'utilisateur] + [MDP] + [MDP] + [J]/[M]/[A]
+    <h3>Coordonnées</h3>
+      # [Nom] + [Adresse mail] + [Numéro de téléphone] + [Numéro 2] + [Numéro 3]
