--- a/Templates/Template "Interface donateur".html
+++ b/Templates/Template "Interface donateur".html
@@ -3,9 +3,14 @@
     <title>{{Interface donateur}}</title>
   </head>
   <body>
-    <h1>{{username}}</h1>
-    <h2>Projet à la une</h2>
+    <h2>{{username}}</h2>
+    <h4>Projet à la une</h4>
       # {{photo}} + {{nom}} + {{description}} + {{commentaire}} + {{valeurinvestisssement}}
-    <h2>Projets soutenus</h2>
+    <h5>Projets soutenus</h5>
       # 4 * ({{Image}} + {{commentaire}} + {{montant investi}})
-    
+    <h4>Informations financières</h4>
+      # {{montantinvesti}} + {{benefeneuro}} + {{dureeenmois}}
+    <h5>{{Coordonnées financières}}</h5>
+      # [[Numéro de carte]] + [[Cryptogramme]] + [[Etablissement]] + [[Nom]] -
+      # {{nom}} + {{cryptogramme}} + {{etablissement}} + {{numerogrise}}
+
