--- a/Templates/Template "Interface entrepreneur".html
+++ b/Templates/Template "Interface entrepreneur".html
@@ -11,6 +11,7 @@
     <h2>Profil {username}</h2>
       # [Description] + [CV]
     <h3>{{Coordonnées financières}}</h3>
-      # [Numéro de carte] + [Cryptogramme] + [Etablissement bancaire] + [Nom de la carte]
+      # [Numéro de carte] + [Cryptogramme] + [Etablissement bancaire] + [Nom de la carte] - SEULEMENT SI ZERO CARTE 
+      # {{nom de carte}} + {{numerogrise}} + {{etablissement}}
       # {{Montant collecté}}
     
