Travail du mercredi 16/04/2014

--- a/Templates/Template "Acceuil".html
+++ b/Templates/Template "Acceuil".html
@@ -1,13 +1,49 @@
 <html>
   <head>
-    <title>{{titre}}</title>
+    <title>{{Acceuil}}</title>
   </head>
   <body>
     <h2>Financement équitable</h2>
-    # cadre donateur dynamique
-      <a=...>
+      <ol>
+      <li><h6>Donner pour construire</h6></li>
+      <li><a=INSCRIPTION>
+      <li><h6>{{username}}</h6></li>
+      </ol>
+      #champs mot de passe
       <img={{imgdonateur}}>
-    # centre
+      #liste des projets
+    <h1>{{listedesprojets}}</h1>
+      <ol>
+        <ol>
+        <li><h5>{{projecttext1}}</h5></li>
+        <li><img={{imgproject1}}></li>
+        </ol>
+        <ol>
+        <ol>
+        <li><h5>{{projecttext2}}</h5></li>
+        <li><img={{imgproject2}}></li>
+        </ol>
+        <ol>
+        <ol>
+        <li><h5>{{projecttext3}}</h5></li>
+        <li><img={{imgproject3}}></li>
+        </ol>
+        <ol>
+        <ol>
+        <li><h5>{{projecttext4}}</h5></li>
+        <li><img={{imgproject4}}></li>
+        </ol>
+        <ol>
+        <ol>
+        <li><h5>{{projecttext5}}</h5></li>
+        <li><img={{imgproject5}}></li>
+        </ol>
+        <ol>
+        <ol>
+        <li><h5>{{projecttext6}}</h5></li>
+        <li><img={{imgproject6}}></li>
+        </ol>
+      </ol>
       # 6 * ({{imgprojet}} + {{description}} + {{montantdemande}})
     # cadre entrepreneur dynamique
       <a=...>
