--- a/Templates/Template "Interface donateur".html
+++ b/Templates/Template "Interface donateur".html
@@ -5,7 +5,8 @@
   <body>
     <h2>{{username}}</h2>
     <h4>Projet à la une</h4>
-      # {{photo}} + {{nom}} + {{description}} + {{commentaire}} + {{valeurinvestisssement}}
+      <img src={{}}> {{photo}} + 
+      <h5>{{nom}}</h5> + {{description}} + {{commentaire}} + {{valeurinvestisssement}}
     <h5>Projets soutenus</h5>
       # 4 * ({{Image}} + {{commentaire}} + {{montant investi}})
     <h4>Informations financières</h4>
