Travail en html

--- a/Templates/Template "Acceuil".html
+++ b/Templates/Template "Acceuil".html
@@ -6,44 +6,43 @@
     <h2>Financement équitable</h2>
       <ol>
       <li><h6>Donner pour construire</h6></li>
-      <li><a=INSCRIPTION>
+      <li><a=INSCRIPTION#1>
       <li><h6>{{username}}</h6></li>
       </ol>
       #champs mot de passe
       <img={{imgdonateur}}>
-      #liste des projets
+        #liste des projets
     <h1>{{listedesprojets}}</h1>
       <ol>
         <ol>
         <li><h5>{{projecttext1}}</h5></li>
         <li><img={{imgproject1}}></li>
-        </ol>
-        <ol>
-        <ol>
+        <li><h6>{{request1}}</h6></li>
         <li><h5>{{projecttext2}}</h5></li>
         <li><img={{imgproject2}}></li>
-        </ol>
-        <ol>
-        <ol>
+        <li><h6>{{request2}}</h6></li>
         <li><h5>{{projecttext3}}</h5></li>
         <li><img={{imgproject3}}></li>
-        </ol>
-        <ol>
-        <ol>
+        <li><h6>{{request3}}</h6></li>
         <li><h5>{{projecttext4}}</h5></li>
         <li><img={{imgproject4}}></li>
-        </ol>
-        <ol>
-        <ol>
+        <li><h6>{{request4}}</h6></li>
         <li><h5>{{projecttext5}}</h5></li>
         <li><img={{imgproject5}}></li>
-        </ol>
-        <ol>
-        <ol>
+        <li><h6>{{request5}}</h6></li>
         <li><h5>{{projecttext6}}</h5></li>
         <li><img={{imgproject6}}></li>
+        <li><h6>{{request6}}</h6></li>
         </ol>
       </ol>
+    <h2>Construire ensemble</h2>
+      <ol>
+      <li><h6>Construire ensemble</h6></li>
+      <li><a=INSCRIPTION#1>
+      <li><h6>{{username}}</h6></li>
+      </ol>
+      #champs mot de passe
+      <img={{imgentrepreneur}}>
       # 6 * ({{imgprojet}} + {{description}} + {{montantdemande}})
     # cadre entrepreneur dynamique
       <a=...>
