Commit des fichiers du venredi 18 avril

--- a/Templates/TEMPLATES/template-accueil.html
+++ b/Templates/TEMPLATES/template-accueil.html
@@ -9,7 +9,7 @@
       <li><a= href="INSCRIPTION#1"/>
       <li><h6>{{username}}</h6></li>
       </ol>
-      #champs mot de passe
+      <FORM method="POST" ACTION= "#Adresse de la page">
       <img= href="{{imgdonateur}}"/>
         #liste des projets
     <h1>Liste des projets</h1>
@@ -29,3 +29,4 @@
       </ol>
       #champs mot de passe
       <img= href="{{imgentrepreneur}}"/>
+  </body>
