--- a/Templates/TEMPLATES/template-liste des projets.html
+++ b/Templates/TEMPLATES/template-liste des projets.html
@@ -10,6 +10,8 @@
         <li><img href="{{projet.image}}"/></li>
         <li>{{commentaire}}
         <li><h6>{{projet.valeur}} €</h6></li>
+        <li>#Champs investir
         <li><h5>{{projet.description}}</h5></li>
         {% endfor %}
       </ol>
+    </body>
