--- a/Templates/TEMPLATES/template-inscription1.html
+++ b/Templates/TEMPLATES/template-inscription1.html
@@ -7,13 +7,13 @@
 			<table width="100%"><tr><td width="50%"><center><h3>Pseudonyme</h3></center>
       	<ol>
       	  <li><h6>Nom</h6></li>
-      	  <FORM method="POST" ACTION= "#Adresse de la page">
+      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
       	  <li><h6>Prénom</h6></li>
-      	  <FORM method="POST" ACTION= "#Adresse de la page">
+      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
       	  <li><h6>Nom d'utilisateur</li></h6>
-      	  <FORM method="POST" ACTION= "#Adresse de la page">
+      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
       	  <li><h6>Mot de passe</li></h6>
-      	  <FORM method="POST" ACTION= "#Adresse de la page">
+      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
       	  <li><h6>Confirmation du mot de passe</li></h6>
       	  <FORM method="POST" ACTION= "#Adresse de la page">
       	  <li><h6>Date de naissance</li></h6>
