Peaufinage des templates

--- a/Templates/TEMPLATES/template-liste des projets.html
+++ b/Templates/TEMPLATES/template-liste des projets.html
@@ -3,7 +3,7 @@
     <title>{{Listeproj}}</title>
   </head>
   <body>
-    <h1>Projets</h1>
+    <h1><center><font color="red">Projets</font></center></h1>
       <ol>
         {% for projet in projets %}
         <li><h5>{{projet.nom}}</h5></li>
