--- a/Templates/TEMPLATES/template-accueil-connecté-bis.html
+++ b/Templates/TEMPLATES/template-accueil-connecté-bis.html
@@ -3,10 +3,10 @@
     <title>{{Acceuil}}</title>
   </head>
   <body>
-    <center><h2><font color="blue">{{Acceuil}}</h2></center>
+    <center><h2><font color="green">{{Acceuil}}</h2></center>
     <center><i><h5>{{username}}</font><i></h5></center>
-    <center><h6>Donner pour construire</h6></center>
-      <img= href="{{imgdonateur}}"/>
+    <center><h6>Construire ensemble</h6></center>
+      <img= href="{{imgentrepreneur}}"/>
         <table border="0" cellspacing="0" cellpadding="0">
         <tr height="2"><td></td></tr>
         <tr><td></td></tr>
