--- a/Templates/TEMPLATES/template-accueil.html
+++ b/Templates/TEMPLATES/template-accueil.html
@@ -3,9 +3,13 @@
     <title>{{Acceuil}}</title>
   </head>
   <body>
-		<center><h1>{{Acceuil}}</h1></center>
-			<table width="100%"><tr><td width="25%"> <center><h2>Financement équitable</h2></center>
-      	<center><h5>Donner pour construire</h6></center></li>
+		<center><h1>Financement &eacute;quitable</h1></center>
+        <table border="0" cellspacing="0" cellpadding="0">
+        <tr height="2"><td></td></tr>
+        <tr><td></td></tr>
+        </table>
+			<table width="100%"><tr><td width="25%"> <center><h2><font color="blue">Donner pour construire</font></h2></center>
+      	<center><h5><i>Donateur</i></h6></center></li>
 				<ol>
       		<li><a href="INSCRIPTION#1">Inscription donateur</a>
 					<li><h6>Nom d'utilisateur</h6></li>
@@ -13,7 +17,7 @@
       		<li><h6>Mot de passe</h6></li>
       		<li><FORM method="POST" ACTION= "#Adresse de la page"></li>
 				</ol>
-      	<img= href="{{imgdonateur}}"/></td><td width="50%"> <center><h1>Liste des projets</h1></center>
+      	<img= href="{{imgdonateur}}"/></td><td width="50%"> <center><h1><font color="red">Liste des projets</font></h1></center>
       	<ol>
       	  {% for projet in projets %}
       	  <li><h5>{{projet.nom}}</h5></li>
@@ -21,8 +25,8 @@
       	  <li><h6>{{projet.valeur}} €</h6></li>
       	  <li><h5>{{projet.description}}</h5></li>
       	  {% endfor %}
-      	</ol></td><td width="25%"> <center><h2>Construire ensemble</h2></center>
-      	<center><h5>Construire ensemble</h5></center>
+      	</ol></td><td width="25%"> <center><h2><font color="green">Construire ensemble</font></h2></center>
+      	<center><h5><i>Entrepreneur</i></h5></center>
 				<ol>
       		<li><a href="INSCRIPTION#1">Inscription entrepreneur</a>
 					<li><h6>Nom d'utilisateur</h6></li>
