--- a/Templates/TEMPLATES/template-inscription1.html
+++ b/Templates/TEMPLATES/template-inscription1.html
@@ -4,34 +4,32 @@
   </head>
   <body>
 		<center><h1>{{Inscription}}</h1></center>
-			<table width="100%"><tr><td width="50%"><center><h3>Pseudonyme</h3></center>
-      	<ol>
-      	  <li><h6>Nom</h6></li>
-      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	  <li><h6>Prénom</h6></li>
-      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	  <li><h6>Nom d'utilisateur</li></h6>
-      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	  <li><h6>Mot de passe</li></h6>
-      	  <li><FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	  <li><h6>Confirmation du mot de passe</li></h6>
-      	  <FORM method="POST" ACTION= "#Adresse de la page">
-      	  <li><h6>Date de naissance</li></h6>
-      	  <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page">
-				</ol></td><td width="50%"><center><h3>Coordonnées</h3></center>
-				<ol>
-					<li><h6>Nom</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
-					<li><h6>Adresse mail</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
-					<li><h6>Confirmation de l'adresse mail</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
-					<li><h6>Numéro de téléphone principal</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
-					<li><h6>Numéro de téléphone supplémentaire</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
-					<li><h6>Numéro de téléphone supplémentaire</h6></li>
-					<FORM method="POST" ACTION= "#Adresse de la page">
+			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h3>Pseudonyme</h3></center>
+      	   <h6>Nom</h6></li>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	   <h6>Pr&eacute;nom</h6></li>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	   <h6>Nom d'utilisateur</li></h6>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	   <h6>Mot de passe</li></h6>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	   <h6>Confirmation du mot de passe</li></h6>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	   <h6>Date de naissance</li></h6>
+      	   <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"></li>
+				</ol></td><td width="50%"><center><h3>Coordonn&eacute;es</h3></center>
+					 <h6>Nom</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+					 <h6>Adresse mail</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+					 <h6>Confirmation de l'adresse mail</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone principal</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6></li>
+					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
 				</ol></td></tr></table>
     
 
