--- a/Templates/TEMPLATES/template-inscription2.html
+++ b/Templates/TEMPLATES/template-inscription2.html
@@ -3,9 +3,9 @@
     <title>{{Inscription}}</title>
   </head>
   <body>
-		<center><h1>{{Inscription}}</h1></center>
-			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h3>Pseudonyme</h3></center>
-      	   <h6>Nom</h6></li>
+		<center><h2><b>{{Contratutilisateur}}</b></h2></center>
+			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h4>{{Nom d'utilisateur}}</center></h4>
+	<h6><center>Merci d'avoir choisi notre site {{Prénom}} {{Nom}}</center>
       	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
       	   <h6>Pr&eacute;nom</h6></li>
       	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
