Travail du vendredi

--- a/Templates/TEMPLATES/template-inscription1.html
+++ b/Templates/TEMPLATES/template-inscription1.html
@@ -18,7 +18,7 @@
       	   <h6>Date de naissance</li></h6>
       	   <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"></li>
 				</ol></td><td width="50%"><center><h3>Coordonn&eacute;es</h3></center>
-					 <h6>Nom</h6></li>
+					 <h6>Pays de r&eacute;sidence</h6></li>
 					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
 					 <h6>Adresse mail</h6></li>
 					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
