Travail du vendredi soir

--- a/Templates/TEMPLATES/template-inscription2.html
+++ b/Templates/TEMPLATES/template-inscription2.html
@@ -5,9 +5,10 @@
 	<body>
 		<center><h2><b>{{Contratutilisateur}}</b></h2></center>
 			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h4>{{Nom d'utilisateur}}</center></h4>
-	<h6><center>Merci d'avoir choisi notre site {{Prénom}} {{Nom}}</center>
+	<h6><center>F&eacute;licitations pour avoir choisi notre site {{Prénom}} {{Nom}} !</center>
+	<h6><center>Vous &ecirc;tes d&eacute;sormais un nouvel {{statut}} ! Toujours prompte &agrave; cr&eacute;er, vous saurez donner le meilleur de vous-m&ecirc;me. </center></h6>
 		<center>{{Contrat}}</center>
-	<h6><i><center>Vous pourrez rajouter une carte de cr&eacute;dit ult&egrave;rierement dans votre espace utilisateur</center></i><h6>
+	<h6><i><center>Vous pourrez rajouter une carte de cr&eacute;dit ult&eacute;rieurement dans votre espace utilisateur</center></i><h6>
 	<h6><i>R&eacute;capitulatif des coordonn&eacute;es {{Nom d'utilisateur}} : </i></h6>
 		<h6>{{Pays de résidence}}</h6>
 		<h6>{{Date de naissance}}</h6>
@@ -15,4 +16,5 @@
 		<h6>{{Numéro de téléphone principal}}</h6>
 		<h6>{{Numéro de téléphone supplémentaire}}</h6>
 	<FORM>
-	<INPUT type= "radio" name="tarif" value="jour"> tarif de jour
+	<INPUT type= "radio" name="accepte" value="accepte"> J"<b>accepte</b> les conditions d'utilisations du site
+	<INPUT type= "radio" name="refuse" value="refuse" checked> Je <b>refuse</b> les conditions d'utilisations du site
