--- a/Templates/TEMPLATES/template-inscription2.html
+++ b/Templates/TEMPLATES/template-inscription2.html
@@ -15,6 +15,10 @@
 		<h6>{{Adresse mail}}</h6>
 		<h6>{{Numéro de téléphone principal}}</h6>
 		<h6>{{Numéro de téléphone supplémentaire}}</h6>
+	<p>
 	<FORM>
 	<INPUT type= "radio" name="accepte" value="accepte"> J"<b>accepte</b> les conditions d'utilisations du site
+	<p>
 	<INPUT type= "radio" name="refuse" value="refuse" checked> Je <b>refuse</b> les conditions d'utilisations du site
+	<p>
+	<center><button onclick="ClicBouton();">Terminer l'inscription</button></center>
