--- a/Templates/TEMPLATES/template-inscription2.html
+++ b/Templates/TEMPLATES/template-inscription2.html
@@ -5,11 +5,12 @@
 	<body>
 		<center><h2><b>{{Contratutilisateur}}</b></h2></center>
 			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h4>{{Nom d'utilisateur}}</center></h4>
-	<h6><center>F&eacute;licitations pour avoir choisi notre site {{Prénom}} {{Nom}} !</center>
-	<h6><center>Vous &ecirc;tes d&eacute;sormais un nouvel {{statut}} ! Toujours prompte &agrave; cr&eacute;er, vous saurez donner le meilleur de vous-m&ecirc;me. </center></h6>
+	<h6><center>F&eacute;licitations pour avoir choisi notre site {{Prénom}} {{Nom}} !<p>Vous &ecirc;tes d&eacute;sormais un nouvel {{statut}} ! Toujours prompte &agrave; cr&eacute;er, vous saurez donner le meilleur de vous-m&ecirc;me. </center></h6>
+		<p>
 		<center>{{Contrat}}</center>
+		<p>
 	<h6><i><center>Vous pourrez rajouter une carte de cr&eacute;dit ult&eacute;rieurement dans votre espace utilisateur</center></i><h6>
-	<h6><i>R&eacute;capitulatif des coordonn&eacute;es {{Nom d'utilisateur}} : </i></h6>
+	<h6><i><font color="grey">R&eacute;capitulatif des coordonn&eacute;es {{Nom d'utilisateur}} : </font></i></h6>
 		<h6>{{Pays de résidence}}</h6>
 		<h6>{{Date de naissance}}</h6>
 		<h6>{{Adresse mail}}</h6>
