--- a/Templates/TEMPLATES/template-accueil.html
+++ b/Templates/TEMPLATES/template-accueil.html
@@ -9,30 +9,25 @@
         <tr><td></td></tr>
         </table>
 			<table width="100%"><tr><td width="25%"> <center><h2><font color="blue">Donner pour construire</font></h2></center>
-      	<center><h5><i>Donateur</i></h6></center></li>
-				<ol>
-      		<li><a href="INSCRIPTION#1">Inscription donateur</a>
-					<li><h6>Nom d'utilisateur</h6></li>
-      		<li><FORM method="POST"></li>
-      		<li><h6>Mot de passe</h6></li>
-      		<li><FORM method="POST" ACTION= "#Adresse de la page"></li>
-				</ol>
-      	<img= href="{{imgdonateur}}"/></td><td width="50%"> <center><h1><font color="red">Liste des projets</font></h1></center>
-      	<ol>
+      	<center><h5><i>Donateur</i></h6></center>
+      		<a href="INSCRIPTION#1">Inscription donateur</a>
+					<h6>Nom d'utilisateur</h6>
+      		<FORM method="POST">
+      		<h6>Mot de passe</h6>
+      		<FORM method="POST" ACTION= "#Adresse de la page">
+      	<img= href="{{imgdonateur}}"/></td><td width="50%"> <center><h1><font color="red">Liste des projets</font></h1></center>   	
       	  {% for projet in projets %}
-      	  <li><h5>{{projet.nom}}</h5></li>
-      	  <li><img href="{{projet.image}}"/></li>
-      	  <li><h6>{{projet.valeur}} €</h6></li>
-      	  <li><h5>{{projet.description}}</h5></li>
+      	  <h5>{{projet.nom}}</h5>
+      	  <img href="{{projet.image}}"/>
+      	  <h6>{{projet.valeur}} €</h6>
+      	  <h5>{{projet.description}}</h5>
       	  {% endfor %}
-      	</ol></td><td width="25%"> <center><h2><font color="green">Construire ensemble</font></h2></center>
-      	<center><h5><i>Entrepreneur</i></h5></center>
-				<ol>
-      		<li><a href="INSCRIPTION#1">Inscription entrepreneur</a>
-					<li><h6>Nom d'utilisateur</h6></li>
-      		<li><FORM method="POST"></li>
-					<li><h6>Mot de passe</h6></li>
-					<li><FORM	method="POST" ACTION= "#Adresse de la page"></li>
-      	</ol>
+      	</td><td width="25%"> <center><h2><font color="green">Construire ensemble</font></h2></center>
+      	<center><h5><i>Entrepreneur</i></h5></center>	
+      		<a href="INSCRIPTION#1">Inscription entrepreneur</a>
+					<h6>Nom d'utilisateur</h6>
+      		<FORM method="POST">
+					<h6>Mot de passe</h6>
+					<FORM	method="POST" ACTION= "#Adresse de la page">	
       	<img= href="{{imgentrepreneur}}"/></td></tr></table>
   </body>
