--- a/Templates/TEMPLATES/template-inscription1.html
+++ b/Templates/TEMPLATES/template-inscription1.html
@@ -4,19 +4,19 @@
   </head>
   <body>
 		<center><h1>{{Inscription}}</h1></center>
-			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h3>Pseudonyme</h3></center>
-      	   <h6>Nom</h6></li>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	   <h6>Pr&eacute;nom</h6></li>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	   <h6>Nom d'utilisateur</li></h6>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	   <h6>Mot de passe</li></h6>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	   <h6>Confirmation du mot de passe</li></h6>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	   <h6>Date de naissance</li></h6>
-      	   <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"></li>
+			<table width="100%"><tr><td width="50%"><center><h3>Pseudonyme</h3></center>
+      	 <h6>Nom</h6></li>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	 <h6>Pr&eacute;nom</h6></li>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	 <h6>Nom d'utilisateur</li></h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	 <h6>Mot de passe</li></h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	 <h6>Confirmation du mot de passe</li></h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
+      	 <h6>Date de naissance</li></h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"></li>
 				</ol></td><td width="50%"><center><h3>Coordonn&eacute;es</h3></center>
 					 <h6>Pays de r&eacute;sidence</h6></li>
 					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
@@ -31,5 +31,7 @@
 					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6></li>
 					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
 				</ol></td></tr></table>
+	<p>
+	<center><button onclick="ClicBouton();"><b>Terminer l'inscription</b></button></center>
     
 
