--- a/Templates/TEMPLATES/template-inscription1.html
+++ b/Templates/TEMPLATES/template-inscription1.html
@@ -4,34 +4,35 @@
   </head>
   <body>
 		<center><h1>{{Inscription}}</h1></center>
+		<br>
 			<table width="100%"><tr><td width="50%"><center><h3>Pseudonyme</h3></center>
-      	 <h6>Nom</h6></li>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	 <h6>Pr&eacute;nom</h6></li>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	 <h6>Nom d'utilisateur</li></h6>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	 <h6>Mot de passe</li></h6>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	 <h6>Confirmation du mot de passe</li></h6>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-      	 <h6>Date de naissance</li></h6>
-      	 <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"></li>
-				</ol></td><td width="50%"><center><h3>Coordonn&eacute;es</h3></center>
-					 <h6>Pays de r&eacute;sidence</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-					 <h6>Adresse mail</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-					 <h6>Confirmation de l'adresse mail</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone principal</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6></li>
-					 <FORM method="POST" ACTION= "#Adresse de la page"></li>
-				</ol></td></tr></table>
-	<p>
-	<center><button onclick="ClicBouton();"><b>Terminer l'inscription</b></button></center>
+      	 <h6>Nom</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page">
+      	 <h6>Pr&eacute;nom</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page">
+      	 <h6>Nom d'utilisateur</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page">
+      	 <h6>Mot de passe</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page">
+      	 <h6>Confirmation du mot de passe</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page">
+      	 <h6>Date de naissance</h6>
+      	 <FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page"><FORM method="POST" ACTION= "#Adresse de la page">
+			</td><td width="50%"><center><h3>Coordonn&eacute;es</h3></center>
+					<h6>Pays de r&eacute;sidence</h6>
+					<FORM method="POST" ACTION= "#Adresse de la page">
+					<h6>Adresse mail</h6>
+					<FORM method="POST" ACTION= "#Adresse de la page">
+					<h6>Confirmation de l'adresse mail</h6>
+					 <FORM method="POST" ACTION= "#Adresse de la page">
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone principal</h6>
+					 <FORM method="POST" ACTION= "#Adresse de la page">
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6>
+					 <FORM method="POST" ACTION= "#Adresse de la page">
+					 <h6>Num&eacute;ro de t&eacute;l&eacute;phone suppl&eacute;mentaire</h6>
+					 <FORM method="POST" ACTION= "#Adresse de la page">
+				</td></tr></table>
+	<br><br>
+	<center><button onclick="ClicBouton();"><b>Poursuivre l'inscription</b></button></center>
     
 
