--- a/Templates/TEMPLATES/template-inscription2.html
+++ b/Templates/TEMPLATES/template-inscription2.html
@@ -5,10 +5,10 @@
 	<body>
 		<center><h2><b>{{Contratutilisateur}}</b></h2></center>
 			<table width="100%"><tr><td width="50%"><tr width="50%"><center><h4>{{Nom d'utilisateur}}</center></h4>
-	<h6><center>F&eacute;licitations pour avoir choisi notre site {{Prénom}} {{Nom}} !<p>Vous &ecirc;tes d&eacute;sormais un nouvel {{statut}} ! Toujours prompte &agrave; cr&eacute;er, vous saurez donner le meilleur de vous-m&ecirc;me. </center></h6>
-		<p>
+	<h6><center>F&eacute;licitations pour avoir choisi notre site {{Prénom}} {{Nom}} !<br>Vous &ecirc;tes d&eacute;sormais un nouvel {{statut}} ! Toujours prompte &agrave; cr&eacute;er, vous saurez donner le meilleur de vous-m&ecirc;me. </center></h6>
+		<br>
 		<center>{{Contrat}}</center>
-		<p>
+		<br>
 	<h6><i><center>Vous pourrez rajouter une carte de cr&eacute;dit ult&eacute;rieurement dans votre espace utilisateur</center></i><h6>
 	<h6><i><font color="grey">R&eacute;capitulatif des coordonn&eacute;es {{Nom d'utilisateur}} : </font></i></h6>
 		<h6>{{Pays de résidence}}</h6>
@@ -16,10 +16,10 @@
 		<h6>{{Adresse mail}}</h6>
 		<h6>{{Numéro de téléphone principal}}</h6>
 		<h6>{{Numéro de téléphone supplémentaire}}</h6>
-	<p>
+	<br>
 	<FORM>
-	<INPUT type= "radio" name="accepte" value="accepte"> J"<b>accepte</b> les conditions d'utilisations du site
-	<p>
+	<INPUT type= "radio" name="accepte" value="accepte"> J'<b>accepte</b> les conditions d'utilisations du site
+	<br><br>
 	<INPUT type= "radio" name="refuse" value="refuse" checked> Je <b>refuse</b> les conditions d'utilisations du site
-	<p>
+	<br><br>
 	<center><button onclick="ClicBouton();">Terminer l'inscription</button></center>
