Travail du vendredi soir

--- a/Templates/TEMPLATES/template-accueil.html
+++ b/Templates/TEMPLATES/template-accueil.html
@@ -25,7 +25,7 @@
       	<h5>{{projet.nom}}</h5>
       	<img href="{{projet.image}}"/>
       	<h5><b>{{projet.valeur}} &euro;</b></h5>
-      	<h5>{{projet.description}}</h5>
+      	{{projet.description}}<br><br>
       	{% endfor %}
     </td><td width="25%">
     	<br>
