--- a/Templates/TEMPLATES/template-liste des projets.html
+++ b/Templates/TEMPLATES/template-liste des projets.html
@@ -14,6 +14,7 @@
       <h5>{{projet.nom}}</h5>
       <img href="{{projet.image}}"/>
       <h5><b>{{projet.valeur}} &euro;</b></h5>
+      <h5>Ont d&eacute;j&agrave; &eacute;t&eacute; collect&eacute;s <font color="blue">{{projet.collecte}} </font> &euro;</h5>
       <h5>{{projet.description}}</h5>
       {% endfor %}
 	</body>
