--- a/Templates/TEMPLATES/template-liste-des projets-connected.html
+++ b/Templates/TEMPLATES/template-liste-des projets-connected.html
@@ -9,6 +9,7 @@
       <h5>{{projet.nom}}</h5>
       <img href="{{projet.image}}"/>
       {{projet.commentaire}}<br>
+      <h5>Ont d&eacute;j&agrave; &eacute;t&eacute; collect&eacute;s <font color="blue">{{projet.collecte}} </font> &euro;</h5>
       <h5><b>{{projet.valeur}} &euro;</b></h5>
       <FORM method="POST" ACTION= "#Adresse de la page"> <button onclick="ClicBouton();">Investir</button>
       <br><br>
