Tentative de debug

--- a/Templates/TEMPLATES/template-accueil.html
+++ b/Templates/TEMPLATES/template-accueil.html
@@ -41,5 +41,6 @@
 				<h6>Mot de passe</h6>
 				<FORM	method="POST" ACTION= "#Adresse de la page">
 				<button onclick="ClicBouton();">Connexion</button>
-      	<img= href="{{imgentrepreneur}}"/></td></tr></table>
+      	<img= href="{{imgentrepreneur}}"/>
+  	</td></tr></table>
   </body>
