--- a/Templates/TEMPLATES/template-entrepreneur.html
+++ b/Templates/TEMPLATES/template-entrepreneur.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>{{username}}</title>
+    <title>{{Nom d'utilisateur}}</title>
   </head>
   <body>
-    <h2><center><font color="green">{{username}}</center></h2>
+    <h2><center><font color="green">{{Nom d'utilisateur}}</center></h2>
     <h6><center><i>Construire ensemble</font></i></center></h6>
     <br>
 		<table width="100%">
